--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer</h1>
+	<p>
+		I want to become a developer because I am fascinated by the 
+		limitless possibilities of creating software that can solve 
+		problems, improve lives, and innovate the world. The 
+		creative challenges and continuous learning in the field of 
+		development drive my passion to make a meaningful impact 
+		through technology
+	</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
