--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Why I want to become a developer</h1>
+	<h1>Why I want to become a developer?</h1>
 	<p>
 		I want to become a developer because I am fascinated by the 
 		limitless possibilities of creating software that can solve 
